removed other orderby no longer wrap course numbers

--- a/public/css/layout/_resume.scss
+++ b/public/css/layout/_resume.scss
@@ -23,6 +23,13 @@
 		.title {
 			text-align: center;
 		}
+		.course-list {
+			text-align: center;
+			
+			h4 {
+				white-space: nowrap;
+			}
+		}
 	}
 	.skills {
 		margin-top: 2em;
